# PromptEar

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  NOTES.md  QUICKSTART.md  README.md  app.py  bootstrap.bat  build.bat  build_zips.py  check_connect.py  config.py  installer.iss  launcher.cs  main.py  pyproject.toml  requirements.txt  run.bat  run.pyw  run.vbs  setup.bat  uninstall.bat
.github/workflows/: ci.yml
core/: __init__.py  detector.py  events.py  installers.py  models.py  pipeline.py  topic.py
processing/: __init__.py  detector.py  enhancer.py  topic.py  transcriber.py
specs/: auto-tests-spec.md  readme-improvements.md  refactoring-spec.md  temp-cleanup.md  video-support-spec.md
testing/: regression.md  smoke.md
testing/bug-reports/: bug-reports.md
testing/checklists/: 01-file-upload.md  02-context.md  03-output-format.md  04-ui.md  05-processing.md  06-cancel.md  07-video.md  08-gpu-status.md  09-sse.md  10-setup.md  11-api.md  12-profiles.md
tests/: conftest.py  pytest.ini
tests/integration/: test_real_transcribe.py
tests/unit/: test_config.py  test_detector.py  test_enhancer.py  test_files.py  test_gpu.py  test_handlers.py  test_logger.py  test_models.py  test_pipeline.py  test_protocol.py  test_queue.py  test_theme.py  test_topic.py  test_transcriber.py  test_widgets.py
ui/: __init__.py  handlers.py  root.py  theme.py  titlebar.py  widgets.py
utils/: __init__.py  extract_audio.py  files.py  gpu.py  logger.py  protocol.py
web/: index.html  script.js  server.py  style.css
тестовые данные/audio/: lecture.aac  lecture.m4a  (+1 more)
(+14 files in other folders)
