[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PromptEar"
version = "0.6.0"
description = "Транскрибация аудио с улучшением текста через LLM"
authors = [{name = "Dmitry Kiryushchenko"}]
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=7",
    "pytest-mock>=3",
    "requests-mock>=1",
    "pre-commit>=4",
    "pytest-cov>=5",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: интеграционные тесты с реальным аудио/whisper",
    "unit: модульные тесты",
]
